# min-timespan-delivery-v2

./: Cargo.toml  README.md
.devcontainer/: Dockerfile  compose.yml  devcontainer.json
.github/workflows/: compare-dell-amico-2020.yml  compare-ptds-ddss-multi-route.yml  compare-ptds-ddss.yml  compare-saleu-2022.yml  compare.yml  lint.yml  reevaluate-endurance.yml  run.yml  uavsupplies.yml
problems/config_parameter/: drone_endurance_config.json  drone_linear_config.json  drone_nonlinear_config.json  truck_config.json  uavsupplies.json
problems/data/: 10.10.1.txt  10.10.2.txt  10.10.3.txt  10.10.4.txt  10.20.1.txt  10.20.2.txt  10.20.3.txt  10.20.4.txt  10.5.1.txt  10.5.2.txt  10.5.3.txt  10.5.4.txt  100.10.1.txt  100.10.2.txt  100.10.3.txt  100.10.4.txt  100.20.1.txt  100.20.2.txt  100.20.3.txt  100.20.4.txt  100.30.1.txt  100.30.2.txt  100.30.3.txt  100.30.4.txt  100.40.1.txt  100.40.2.txt  100.40.3.txt  100.40.4.txt  1000.10.1.txt  1000.10.2.txt  1000.10.3.txt  1000.10.4.txt  1000.20.1.txt  1000.20.2.txt  1000.20.3.txt  1000.20.4.txt  1000.30.1.txt  1000.30.2.txt  1000.30.3.txt  1000.30.4.txt  (+88 more)
problems/milp/: result_20.10.1.json  result_20.10.2.json  result_20.10.4.json  result_20.20.1.json  result_20.20.2.json  result_20.20.3.json  result_20.20.4.json  (+3 more)
scripts/: compare.py  dell-amico-2020-compare.py  dell-amico-2020.py  map.html  map.py  ptds-ddss-compare.py  ptds-ddss.py  reevaluate.py  saleu-2022-compare.py  saleu-2022.py  saleu.py  summary.py
src/: cli.rs  clusterize.rs  config.rs  errors.rs  logger.rs  main.rs  neighborhoods.rs  routes.rs  solutions.rs
(+1 files in other folders)
