[package]
name = "min-timespan-delivery"
version = "0.1.0"
edition = "2021"

[dependencies]
atomic_float = "1.1.0"
clap = { version = "4.5.38", features = ["derive"] }
colored = "3.0.0"
num-traits = "0.2.19"
rand = "0.9.1"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
